# obj_viewer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Renderer/: GLWidget.cpp  GLWidget.h
src/core/: ModelLoader.cpp  ModelLoader.h
src/res/: res.qrc
src/res/shaders/: grid.frag  grid.vert  phong.frag  phong.vert
src/ui/: MainWindow.cpp  MainWindow.h
